# modern-gpt

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: baseline.md  flashattention.md  gqa.md  qknorm.md  rmsnorm.md  rope.md  scaling-laws.md  swiglu.md
scripts/: train.py
src/modern_gpt/: __init__.py  attention.py  config.py  ffn.py  model.py  norm.py  rope.py
tests/: test_attention.py  test_ffn.py  test_model.py  test_rope.py
