[project]
name = "modern-gpt"
version = "0.1.0"
description = "A small, modern GPT implemented from scratch — progressively upgrading from GPT-2 to the LLaMA 3 architecture."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.14"
authors = [
    { name = "Ziyad Alfikie" },
]
keywords = ["transformer", "gpt", "llama", "language-model", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.6.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.urls]
Repository = "https://github.com/Marshhalz/modern-gpt"
Issues = "https://github.com/Marshhalz/modern-gpt/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/modern_gpt"]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu124"
explicit = true
name = "pytorch-cu124"

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
